[package]
name = "skip_error"
version = "1.0.1"
license = "MIT"
authors = ["Kisio Digital <team.coretools@kisio.org>"]
description = "A macro to help skip an iteration in a loop from a Result"
edition = "2018"
homepage = "https://github.com/CanalTP/skip_error"
repository = "https://github.com/CanalTP/skip_error"
documentation = "https://docs.rs/skip_error"
readme = "README.md"
categories = ["rust-patterns"]
keywords = ["macro", "log"]

[dependencies]
log = { version = "0.4", optional = true }

[package.metadata.docs.rs]
all-features = true
